cmake_minimum_required(VERSION 3.3)
project(hmmer_fork)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    easel/miniapps/esl-afetch.c
    easel/miniapps/esl-alimanip.c
    easel/miniapps/esl-alimap.c
    easel/miniapps/esl-alimask.c
    easel/miniapps/esl-alimerge.c
    easel/miniapps/esl-alipid.c
    easel/miniapps/esl-alistat.c
    easel/miniapps/esl-cluster.c
    easel/miniapps/esl-compalign.c
    easel/miniapps/esl-compstruct.c
    easel/miniapps/esl-construct.c
    easel/miniapps/esl-histplot.c
    easel/miniapps/esl-mask.c
    easel/miniapps/esl-reformat.c
    easel/miniapps/esl-selectn.c
    easel/miniapps/esl-seqrange.c
    easel/miniapps/esl-seqstat.c
    easel/miniapps/esl-sfetch.c
    easel/miniapps/esl-shuffle.c
    easel/miniapps/esl-ssdraw.c
    easel/miniapps/esl-stranslate.c
    easel/miniapps/esl-weight.c
    easel/easel.c
    easel/easel.h
    easel/esl_alphabet.c
    easel/esl_alphabet.h
    easel/esl_buffer.c
    easel/esl_buffer.h
    easel/esl_cluster.c
    easel/esl_cluster.h
    easel/esl_composition.c
    easel/esl_composition.h
    easel/esl_dirichlet.c
    easel/esl_dirichlet.h
    easel/esl_distance.c
    easel/esl_distance.h
    easel/esl_dmatrix.c
    easel/esl_dmatrix.h
    easel/esl_exponential.c
    easel/esl_exponential.h
    easel/esl_fileparser.c
    easel/esl_fileparser.h
    easel/esl_gamma.c
    easel/esl_gamma.h
    easel/esl_getopts.c
    easel/esl_getopts.h
    easel/esl_gev.c
    easel/esl_gev.h
    easel/esl_gumbel.c
    easel/esl_gumbel.h
    easel/esl_histogram.c
    easel/esl_histogram.h
    easel/esl_hmm.c
    easel/esl_hmm.h
    easel/esl_hyperexp.c
    easel/esl_hyperexp.h
    easel/esl_keyhash.c
    easel/esl_keyhash.h
    easel/esl_mem.c
    easel/esl_mem.h
    easel/esl_minimizer.c
    easel/esl_minimizer.h
    easel/esl_mixgev.c
    easel/esl_mixgev.h
    easel/esl_mpi.c
    easel/esl_mpi.h
    easel/esl_msa.c
    easel/esl_msa.h
    easel/esl_msacluster.c
    easel/esl_msacluster.h
    easel/esl_msafile.c
    easel/esl_msafile.h
    easel/esl_msafile2.c
    easel/esl_msafile2.h
    easel/esl_msafile_a2m.c
    easel/esl_msafile_a2m.h
    easel/esl_msafile_afa.c
    easel/esl_msafile_afa.h
    easel/esl_msafile_clustal.c
    easel/esl_msafile_clustal.h
    easel/esl_msafile_phylip.c
    easel/esl_msafile_phylip.h
    easel/esl_msafile_psiblast.c
    easel/esl_msafile_psiblast.h
    easel/esl_msafile_selex.c
    easel/esl_msafile_selex.h
    easel/esl_msafile_stockholm.c
    easel/esl_msafile_stockholm.h
    easel/esl_msashuffle.c
    easel/esl_msashuffle.h
    easel/esl_msaweight.c
    easel/esl_msaweight.h
    easel/esl_normal.c
    easel/esl_normal.h
    easel/esl_paml.c
    easel/esl_paml.h
    easel/esl_random.c
    easel/esl_random.h
    easel/esl_randomseq.c
    easel/esl_randomseq.h
    easel/esl_ratematrix.c
    easel/esl_ratematrix.h
    easel/esl_recorder.c
    easel/esl_recorder.h
    easel/esl_regexp.c
    easel/esl_regexp.h
    easel/esl_rootfinder.c
    easel/esl_rootfinder.h
    easel/esl_scorematrix.c
    easel/esl_scorematrix.h
    easel/esl_sq.c
    easel/esl_sq.h
    easel/esl_sqio.c
    easel/esl_sqio.h
    easel/esl_sqio_ascii.c
    easel/esl_sqio_ascii.h
    easel/esl_sqio_ncbi.c
    easel/esl_sqio_ncbi.h
    easel/esl_sse.c
    easel/esl_sse.h
    easel/esl_ssi.c
    easel/esl_ssi.h
    easel/esl_stack.c
    easel/esl_stack.h
    easel/esl_stats.c
    easel/esl_stats.h
    easel/esl_stopwatch.c
    easel/esl_stopwatch.h
    easel/esl_stretchexp.c
    easel/esl_stretchexp.h
    easel/esl_swat.c
    easel/esl_threads.c
    easel/esl_threads.h
    easel/esl_translate.c
    easel/esl_translate.h
    easel/esl_tree.c
    easel/esl_tree.h
    easel/esl_vectorops.c
    easel/esl_vectorops.h
    easel/esl_vmx.c
    easel/esl_vmx.h
    easel/esl_weibull.c
    easel/esl_weibull.h
    easel/esl_workqueue.c
    easel/esl_workqueue.h
    easel/esl_wuss.c
    easel/esl_wuss.h
    easel/interface_gsl.c
    easel/interface_gsl.h
    easel/interface_lapack.c
    easel/interface_lapack.h
    include/cachedb.h
    include/hmmer.h
    include/impl_sse.h
    include/p7_config.h
    include/p7_gbands.h
    include/p7_gmxb.h
    include/p7_gmxchk.h
    include/p7_hmmcache.h
    libdivsufsort/divsufsort.c
    profmark/create-profmark.c
    profmark/rocplot.c
    src/impl_dummy/decoding.c
    src/impl_dummy/fwdback.c
    src/impl_dummy/impl_dummy.h
    src/impl_dummy/io.c
    src/impl_dummy/mpi.c
    src/impl_dummy/msvfilter.c
    src/impl_dummy/null2.c
    src/impl_dummy/optacc.c
    src/impl_dummy/p7_omx.c
    src/impl_dummy/p7_oprofile.c
    src/impl_dummy/stotrace.c
    src/impl_dummy/vitfilter.c
    src/impl_dummy/vitscore.c
    src/impl_sse/decoding.c
    src/impl_sse/fwdback.c
    src/impl_sse/impl_sse.h
    src/impl_sse/io.c
    src/impl_sse/mpi.c
    src/impl_sse/msvfilter.c
    src/impl_sse/null2.c
    src/impl_sse/optacc.c
    src/impl_sse/p7_omx.c
    src/impl_sse/p7_oprofile.c
    src/impl_sse/ssvfilter.c
    src/impl_sse/stotrace.c
    src/impl_sse/vitfilter.c
    src/impl_sse/vitscore.c
    src/impl_vmx/decoding.c
    src/impl_vmx/fwdback.c
    src/impl_vmx/impl_vmx.h
    src/impl_vmx/io.c
    src/impl_vmx/mpi.c
    src/impl_vmx/msvfilter.c
    src/impl_vmx/null2.c
    src/impl_vmx/optacc.c
    src/impl_vmx/p7_omx.c
    src/impl_vmx/p7_oprofile.c
    src/impl_vmx/stotrace.c
    src/impl_vmx/vitfilter.c
    src/impl_vmx/vitscore.c
    src/alimask.c
    src/build.c
    src/cachedb.c
    src/cachedb.h
    src/emit.c
    src/errors.c
    src/evalues.c
    src/eweight.c
    src/fm_alphabet.c
    src/fm_general.c
    src/fm_sse.c
    src/fm_ssv.c
    src/generic_decoding.c
    src/generic_fwdback.c
    src/generic_fwdback_banded.c
    src/generic_fwdback_chk.c
    src/generic_fwdback_rescaled.c
    src/generic_msv.c
    src/generic_null2.c
    src/generic_optacc.c
    src/generic_stotrace.c
    src/generic_viterbi.c
    src/generic_vtrace.c
    src/h2_io.c
    src/heatmap.c
    src/hmmalign.c
    src/hmmbuild.c
    src/hmmc2.c
    src/hmmconvert.c
    src/hmmdmstr.c
    src/hmmdutils.c
    src/hmmdwrkr.c
    src/hmmemit.c
    src/hmmer.c
    src/hmmer.h
    src/hmmerfm-exactmatch.c
    src/hmmfetch.c
    src/hmmlogo.c
    src/hmmpgmd.c
    src/hmmpgmd.h
    src/hmmpgmd2msa.c
    src/hmmpress.c
    src/hmmscan.c
    src/hmmsearch.c
    src/hmmsim.c
    src/hmmstat.c
    src/itest_brute.c
    src/jackhmmer.c
    src/logsum.c
    src/makehmmerdb.c
    src/modelconfig.c
    src/modelstats.c
    src/mpisupport.c
    src/nhmmer.c
    src/nhmmscan.c
    src/p7_alidisplay.c
    src/p7_bg.c
    src/p7_builder.c
    src/p7_domaindef.c
    src/p7_gbands.c
    src/p7_gbands.h
    src/p7_gmx.c
    src/p7_gmxb.c
    src/p7_gmxb.h
    src/p7_gmxchk.c
    src/p7_gmxchk.h
    src/p7_hmm.c
    src/p7_hmmcache.c
    src/p7_hmmcache.h
    src/p7_hmmfile.c
    src/p7_hmmwindow.c
    src/p7_null3.c
    src/p7_pipeline.c
    src/p7_prior.c
    src/p7_profile.c
    src/p7_scoredata.c
    src/p7_spensemble.c
    src/p7_tophits.c
    src/p7_trace.c
    src/phmmer.c
    src/seqmodel.c
    src/tracealign.c)

add_executable(hmmer_fork ${SOURCE_FILES})